*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.24 ===
* Fixed compilation on modern compilers.

=== 1.0.23 ===
* Added directory contents view and navigation of currently loaded sample.
* Mono samples are now played as stereo samples with duplicated left channel.
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Fixed not working MIDI channel setup.
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Added Dry/Wet balance control.
* Added MIDI codes display for velocity.
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Added audio file preview in the open dialog.
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Added german translations (contributed by Johannes Guenther).
* Added pitch control for the sample.
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Initial release.
